# url-shortner

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  locustfile.py  pyproject.toml
alembic/: env.py
alembic/versions/: 1a826bb04331_create_urls_table.py  5a0091d92124_add_clicks_table.py
app/: db.py  main.py  redis.py  utils.py
app/models/: __init__.py  click.py  url.py  user.py
app/routers/: redirect.py  shorten.py  stats.py
